# faust-codec-flatbuffers

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml  tox.ini
faust_codec_flatbuffers/: codec.py  faust_model_converter.py
faust_codec_flatbuffers/reflection/: __init__.py
tests/: flatc.py  test_codec.py  test_faust_model_converter.py
